--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
         data-orientation="landscape" data-scale-mode="fixedHeight" data-frame-rate="60" data-content-width="1280"
         data-content-height="720" data-multi-fingered="1" data-show-fps="false" data-show-log="false"
         data-show-fps-style="x:0,y:0,size:24,textColor:0xffffff,bgAlpha:0.9">
-        <div id="preloading" style="margin:auto; width:100%; height:100%; z-index:1000">
-            <img id="preloading_bg" src="resource/preload/bg_loading_nanjing.png"
-                style="width:100%; height:100%; z-index:1000; object-fit: cover;max-width: 100%;max-height: 100%;" />
+        <div id="preloading" style="margin:auto; width:100vw; height:100vh; z-index:1000">
+            <!-- <img id="preloading_bg" src="resource/preload/bg_loading_nanjing.png"
+                style="width:auto; height:100%; z-index:1000; object-fit: cover;text-align:center;" /> -->
+            <div
+                style="position:relative;top:0;color: #ffffff;display:block;text-align:center;height: 100vh;width: 100vw;">
+                <img src="resource/preload/bg_loading_nanjing.png" alt="" id="preloading_bg"
+                    style="width: 100vw;height: 100vh;">
+            </div>
             <div align="center"><img id="preloading_loading" src="resource/preload/loading.gif?v=" +Math.random()
                     style="position: absolute; top: 60%; margin-left: -38px;margin-top: -8px;object-fit: contain;" />
             </div>
@@ -98,24 +103,31 @@
             var width = document.documentElement.clientWidth,
                 height = document.documentElement.clientHeight,
                 $wrapper = document.getElementById("preloading"),
+                $bg = document.getElementById("preloading_bg"),
+                styleBg = "",
                 style = "";
 
             if (width >= height) { // 横屏
-                style += "width:" + width + "px;"; // 注意旋转后的宽高切换
-                style += "height:" + height + "px;";
+                style += "width:" + 100 + "vw;"; // 注意旋转后的宽高切换
+                style += "height:" + 100 + "vh;";
                 style += "-webkit-transform: rotate(0); transform: rotate(0);";
                 style += "-webkit-transform-origin: 0 0;";
                 style += "transform-origin: 0 0;";
+                styleBg += "width:" + 100 + "vw;";
+                styleBg += "height:" + 100 + "vh;";
             }
             else { // 竖屏
-                style += "width:" + height + "px;";
-                style += "height:" + width + "px;";
+                style += "width:" + 100 + "vh;";
+                style += "height:" + 100 + "vw;";
                 style += "-webkit-transform: rotate(90deg); transform: rotate(90deg);";
                 // 注意旋转中点的处理
-                style += "-webkit-transform-origin: " + width / 2 + "px " + width / 2 + "px;";
-                style += "transform-origin: " + width / 2 + "px " + width / 2 + "px;";
+                style += "-webkit-transform-origin: " + 50 + "vw " + 50 + "vw;";
+                style += "transform-origin: " + 50 + "vw " + 50 + "vw;";
+                styleBg += "width:" + 100 + "vh;";
+                styleBg += "height:" + 100 + "vw;";
             }
             $wrapper.style.cssText = style;
+            $bg.style.cssText = styleBg;
         }
         var detectOrient = function () {
             setTimeout(function () {
@@ -176,8 +188,8 @@
 
                 document.fonts.ready.then(success, fail);
                 function success() {
-                    window.removeEventListener('resize', detectOrient, false);
-                    window.removeEventListener('orientationchange', detectOrient, false);
+                    // window.removeEventListener('resize', detectOrient, false);
+                    // window.removeEventListener('orientationchange', detectOrient, false);
                     console.info("load font success.");
                     egret.runEgret({
                         renderMode: "webgl", audioType: 0, calculateCanvasScaleFactor: function (context) {
