--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         data-orientation="landscape" data-scale-mode="fixedHeight" data-frame-rate="60" data-content-width="1280"
         data-content-height="720" data-multi-fingered="1" data-show-fps="false" data-show-log="false"
         data-show-fps-style="x:0,y:0,size:24,textColor:0xffffff,bgAlpha:0.9">
-        <div id="preloading" style="margin:auto; width:100vw; height:100vh; z-index:1000">
-            <!-- <img id="preloading_bg" src="resource/preload/bg_loading_nanjing.png"
-                style="width:auto; height:100%; z-index:1000; object-fit: cover;text-align:center;" /> -->
+        <!-- <div id="preloading" style="margin:auto; width:100vw; height:100vh; z-index:1000">
             <div
                 style="position:relative;top:0;color: #ffffff;display:block;text-align:center;height: 100vh;width: 100vw;">
                 <img src="resource/preload/bg_loading_nanjing.png" alt="" id="preloading_bg"
@@ -72,9 +70,9 @@
             <p id="progressText"
                 style="font-family:fzch;height: 20px; color: #4d4a4a; position: absolute; left:50%; top: 50%; transform: translateY(-50%);">
                 0%</p>
-        </div>
+        </div> -->
     </div>
-    <div id="divImage"
+    <!-- <div id="divImage"
         style="background: #373737;display:none;text-align:center;z-index:99;width:100%;height:100%;position: fixed;">
         <div style="position:relative;top:0;color: #ffffff;display:block;text-align:center;height: 100%;width: auto;">
             <img src="" alt="" id="shareImage" style="width: auto;height: 100%;">
@@ -88,7 +86,7 @@
             style="position:absolute;left:20%;top:1%; width: 50vw; height: auto;pointer-events:none;">
         <img src="./resource/preload/H5share/img_h5_finger.png" alt=""
             style="position:absolute;left:44%;top:30%; width: 12vw; height: auto;pointer-events:none;">
-    </div>
+    </div> -->
     <script>
         ///这里添加点击 X 按钮关闭
         function isHidden(idtext) {
@@ -99,55 +97,54 @@
     <script>
         // let egretCanvas = document.getElementById("egret-canvas")
         // egretCanvas.style.display = "none"
-        var detectOrientOri = function () {
-            var width = document.documentElement.clientWidth,
-                height = document.documentElement.clientHeight,
-                $wrapper = document.getElementById("preloading"),
-                $bg = document.getElementById("preloading_bg"),
-                styleBg = "",
-                style = "";
+        // var detectOrientOri = function () {
+        //     var width = document.documentElement.clientWidth,
+        //         height = document.documentElement.clientHeight,
+        //         $wrapper = document.getElementById("preloading"),
+        //         $bg = document.getElementById("preloading_bg"),
+        //         styleBg = "",
+        //         style = "";
 
-            if (width >= height) { // 横屏
-                style += "width:" + 100 + "vw;"; // 注意旋转后的宽高切换
-                style += "height:" + 100 + "vh;";
-                style += "-webkit-transform: rotate(0); transform: rotate(0);";
-                style += "-webkit-transform-origin: 0 0;";
-                style += "transform-origin: 0 0;";
-                styleBg += "width:" + 100 + "vw;";
-                styleBg += "height:" + 100 + "vh;";
-            }
-            else { // 竖屏
-                style += "width:" + 100 + "vh;";
-                style += "height:" + 100 + "vw;";
-                style += "-webkit-transform: rotate(90deg); transform: rotate(90deg);";
-                // 注意旋转中点的处理
-                style += "-webkit-transform-origin: " + 50 + "vw " + 50 + "vw;";
-                style += "transform-origin: " + 50 + "vw " + 50 + "vw;";
-                styleBg += "width:" + 100 + "vh;";
-                styleBg += "height:" + 100 + "vw;";
-            }
-            $wrapper.style.cssText = style;
-            $bg.style.cssText = styleBg;
-        }
-        var detectOrient = function () {
-            setTimeout(function () {
-                detectOrientOri()
-            }, 300)
-        }
-        var evt = "onorientationchange" in window ? "orientationchange" : "resize";
-        window.addEventListener(evt, detectOrient)
-        detectOrientOri();
+        //     if (width >= height) { // 横屏
+        //         style += "width:" + 100 + "vw;"; // 注意旋转后的宽高切换
+        //         style += "height:" + 100 + "vh;";
+        //         style += "-webkit-transform: rotate(0); transform: rotate(0);";
+        //         style += "-webkit-transform-origin: 0 0;";
+        //         style += "transform-origin: 0 0;";
+        //         styleBg += "width:" + 100 + "vw;";
+        //         styleBg += "height:" + 100 + "vh;";
+        //     }
+        //     else { // 竖屏
+        //         style += "width:" + 100 + "vh;";
+        //         style += "height:" + 100 + "vw;";
+        //         style += "-webkit-transform: rotate(90deg); transform: rotate(90deg);";
+        //         // 注意旋转中点的处理
+        //         style += "-webkit-transform-origin: " + 50 + "vw " + 50 + "vw;";
+        //         style += "transform-origin: " + 50 + "vw " + 50 + "vw;";
+        //         styleBg += "width:" + 100 + "vh;";
+        //         styleBg += "height:" + 100 + "vw;";
+        //     }
+        //     $wrapper.style.cssText = style;
+        //     $bg.style.cssText = styleBg;
+        // }
+        // var detectOrient = function () {
+        //     setTimeout(function () {
+        //         detectOrientOri()
+        //     }, 300)
+        // }
+        // var evt = "onorientationchange" in window ? "orientationchange" : "resize";
+        // window.addEventListener(evt, detectOrient)
+        // detectOrientOri();
         var loadScript = function (list, callback) {
             var loaded = 0;
             var loadNext = function () {
                 loadSingleScript(list[loaded], function () {
                     loaded++;
-                    // console.log("loaded:" + loaded + " Total:" + list.length)
-                    // console.log(Math.round(loaded / list.length * 100))
-                    var lb = document.getElementById("progressText")
-                    // alert("loaded / list.length" + loaded / list.length)
-                    lb.innerHTML = "" + (loaded / list.length * 100).toFixed(0) + "%"
-                    lb.style.marginLeft = (-(lb.clientWidth / 2)) + "px"
+
+                    // var lb = document.getElementById("progressText")
+                    // lb.innerHTML = "" + (loaded / list.length * 100).toFixed(0) + "%"
+                    // lb.style.marginLeft = (-(lb.clientWidth / 2)) + "px"
+
                     if (loaded >= list.length) {
                         callback();
                     }
