--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 detectOrientOri()
             }, 300)
         }
-        var evt = "onorientationchange" in window ? "orientationchange" : "resize";
-        window.addEventListener(evt, detectOrient)
+        // var evt = "onorientationchange" in window ? "orientationchange" : "resize";
+        // window.addEventListener(evt, detectOrient)
         detectOrientOri();
         var loadScript = function (list, callback) {
             var loaded = 0;
@@ -182,7 +182,7 @@
                  * }
                  **/
                 // window.removeEventListener('resize', detectOrient, false);
-                window.removeEventListener('orientationchange', detectOrient, false);
+                // window.removeEventListener('orientationchange', detectOrient, false);
                 document.fonts.ready.then(success, fail);
                 function success() {
                     console.info("load font success.");
