--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         }
         // var evt = "onorientationchange" in window ? "orientationchange" : "resize";
         // window.addEventListener(evt, detectOrient)
-        detectOrientOri();
+        // detectOrientOri();
         var loadScript = function (list, callback) {
             var loaded = 0;
             var loadNext = function () {
