--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="x5-orientation" content="landscape">
     <meta name="x5-fullscreen" content="true" />
     <meta name="360-fullscreen" content="true" />
+
+    <link rel="shortcut icon" href="favicon.ico">
     <style>
         html,
         body {
@@ -58,17 +60,25 @@
         data-orientation="landscape" data-scale-mode="fixedHeight" data-frame-rate="60" data-content-width="1280"
         data-content-height="720" data-multi-fingered="1" data-show-fps="false" data-show-log="false"
         data-show-fps-style="x:0,y:0,size:24,textColor:0xffffff,bgAlpha:0.9">
-        <div id="preloading" style="margin:auto; width:auto; height:100vh; z-index:1000">
-            <div style="position:relative;top:0;display:block;text-align:center;height: 100vh;width: auto;">
-                <img src="resource/preload/bg_loading_nanjing.png" alt="" id="preloading_bg"
-                    style="width: auto;height: 100vh; max-width: 100%; max-height: 100%;">
+        <div id="preloading" style="margin:auto; width:100%; height:100%; z-index:1000">
+            <div
+                style="background: #ffffff; position:relative;top:0;display:block;text-align:center;height: 100%;width: 100%;">
+                <!-- <img src="resource/preload/bg_loading_nanjing.png" alt="" id="preloading_bg"
+                    style="width: auto;height: 100vh; max-width: 100%; max-height: 100%;"> -->
             </div>
             <div align="center"><img id="preloading_loading" src="resource/preload/loading.gif?v=" +Math.random()
                     style="position: absolute; top: 60%; margin-left: -38px;margin-top: -8px;object-fit: contain;" />
             </div>
+            <div align="center">
+                <img src="./resource/preload/h5_loading_icon.png"
+                    style="position:absolute;top:26%;margin-left: -66px;margin-top: -66px;object-fit: contain;">
+            </div>
             <p id="progressText"
                 style="font-family:fzch;height: 20px; color: #4d4a4a; position: absolute; left:50%; top: 50%; transform: translateY(-50%);">
                 0%</p>
+            <p id="notice"
+                style="font-family:fzch;height: 20px; color: #4d4a4a; text-align:center;position:relative; bottom: 30%">
+                抵制不良游戏，拒绝盗版游戏。注意自我保护，谨防受骗上当。<br>适度游戏益脑，沉迷游戏伤身。合理安排时间，享受健康生活。</p>
         </div>
     </div>
     <div id="divImage"
@@ -94,45 +104,60 @@
         }
     </script>
     <script>
-        var detectOrientOri = function () {
-            var width = document.documentElement.clientWidth,
-                height = document.documentElement.clientHeight,
-                $wrapper = document.getElementById("preloading"),
-                $bg = document.getElementById("preloading_bg"),
-                styleBg = "",
-                style = "";
+        // var detectOrientOri = function () {
+        //     var width = document.documentElement.clientWidth,
+        //         height = document.documentElement.clientHeight,
+        //         $wrapper = document.getElementById("preloading"),
+        //         $bg = document.getElementById("preloading_bg"),
+        //         styleBg = "",
+        //         style = "";
 
-            if (width >= height) { // 横屏
-                style += "width:" + 100 + "vw;"; // 注意旋转后的宽高切换
-                style += "height:" + 100 + "vh;";
-                style += "-webkit-transform: rotate(0); transform: rotate(0);";
-                style += "-webkit-transform-origin: 0 0;";
-                style += "transform-origin: 0 0;";
-                styleBg += "width:auto;";
-                styleBg += "height:" + 100 + "vh;";
-                styleBg += "max-width:100%;max-height: 100%;";
+        //     if (width >= height) { // 横屏
+        //         style += "width:" + 100 + "vw;"; // 注意旋转后的宽高切换
+        //         style += "height:" + 100 + "vh;";
+        //         style += "-webkit-transform: rotate(0); transform: rotate(0);";
+        //         style += "-webkit-transform-origin: 0 0;";
+        //         style += "transform-origin: 0 0;";
+        //         styleBg += "width:auto;";
+        //         styleBg += "height:" + 100 + "vh;";
+        //         styleBg += "max-width:100%;max-height: 100%;";
 
-            }
-            else { // 竖屏
-                style += "width:" + 100 + "vh;";
-                style += "height:" + 100 + "vw;";
-                style += "-webkit-transform: rotate(90deg); transform: rotate(90deg);";
-                // 注意旋转中点的处理
-                style += "-webkit-transform-origin: " + 50 + "vw " + 50 + "vw;";
-                style += "transform-origin: " + 50 + "vw " + 50 + "vw;";
-                styleBg += "width:" + 100 + "vh;";
-                styleBg += "height:" + 100 + "vw;";
-            }
-            $wrapper.style.cssText = style;
-            $bg.style.cssText = styleBg;
+        //     }
+        //     else { // 竖屏
+        //         style += "width:" + 100 + "vh;";
+        //         style += "height:" + 100 + "vw;";
+        //         style += "-webkit-transform: rotate(90deg); transform: rotate(90deg);";
+        //         // 注意旋转中点的处理
+        //         style += "-webkit-transform-origin: " + 50 + "vw " + 50 + "vw;";
+        //         style += "transform-origin: " + 50 + "vw " + 50 + "vw;";
+        //         styleBg += "width:" + 100 + "vh;";
+        //         styleBg += "height:" + 100 + "vw;";
+        //     }
+        //     $wrapper.style.cssText = style;
+        //     $bg.style.cssText = styleBg;
+        // }
+        var width = document.documentElement.clientWidth,
+            height = document.documentElement.clientHeight,
+            $noticeText = document.getElementById("notice")
+        if (width >= height) { // 横屏
+        }
+        else { // 竖屏
+            $noticeText.innerHTML = "抵制不良游戏，拒绝盗版游戏。<br>注意自我保护，谨防受骗上当。<br>适度游戏益脑，沉迷游戏伤身。<br>合理安排时间，享受健康生活。"
         }
         var detectOrient = function () {
             setTimeout(function () {
-                detectOrientOri()
+                var width = document.documentElement.clientWidth,
+                    height = document.documentElement.clientHeight,
+                    $noticeText = document.getElementById("notice")
+                if (width >= height) { // 横屏
+                }
+                else { // 竖屏
+                    $noticeText.innerHTML = "抵制不良游戏，拒绝盗版游戏。<br>注意自我保护，谨防受骗上当。<br>适度游戏益脑，沉迷游戏伤身。<br>合理安排时间，享受健康生活。"
+                }
             }, 300)
         }
-        // var evt = "onorientationchange" in window ? "orientationchange" : "resize";
-        // window.addEventListener(evt, detectOrient)
+        var evt = "onorientationchange" in window ? "orientationchange" : "resize";
+        window.addEventListener(evt, detectOrient)
         // detectOrientOri();
         var loadScript = function (list, callback) {
             var loaded = 0;
@@ -181,8 +206,8 @@
                  * "calculateCanvasScaleFactor": //a function return canvas scale factor
                  * }
                  **/
-                // window.removeEventListener('resize', detectOrient, false);
-                // window.removeEventListener('orientationchange', detectOrient, false);
+                window.removeEventListener('resize', detectOrient, false);
+                window.removeEventListener('orientationchange', detectOrient, false);
                 document.fonts.ready.then(success, fail);
                 function success() {
                     console.info("load font success.");
